--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,9 +4,18 @@
   border-radius: 3px;
   font-size: 14px;
   color: #fff;
-  background-color: #0d6efd;
-  transition: background-color .15s;
+  transition-duration: .15s;
   cursor: pointer;
 
   &:hover { background-color: darken(#0d6efd, 5%)}
+}
+
+.btn_primary { background-color: #0d6efd; }
+
+.btn_ghost {
+  color: #000;
+  background: none;
+  box-shadow: 0 0 0 1px #ccc;
+
+  &:hover { color: #fff; }
 }
